--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,44 +5,79 @@
     <title>Register - Training Institute</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #f0f2f5; display: flex; align-items: center; justify-content: center; height: 100vh; }
-        .reg-card { width: 100%; max-width: 400px; padding: 30px; background: white; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+        body { 
+            background: linear-gradient(135deg, #007bff 0%, #00d2ff 100%); 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            height: 100vh; 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        .reg-card { 
+            width: 100%; 
+            max-width: 420px; 
+            padding: 40px; 
+            background: white; 
+            border-radius: 15px; 
+            box-shadow: 0 10px 25px rgba(0,0,0,0.2); 
+        }
+        .form-control:focus, .form-select:focus {
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+            border-color: #007bff;
+        }
+        .btn-success {
+            background-color: #28a745;
+            border: none;
+            padding: 10px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+        .btn-success:hover {
+            background-color: #218838;
+            transform: translateY(-2px);
+        }
     </style>
 </head>
 <body>
 
 <div class="reg-card">
-    <h3 class="text-center mb-4">📝 Create Account</h3>
+    <div class="text-center mb-4">
+        <h3>📝 Create Account</h3>
+        <p class="text-muted">Join the institute today</p>
+    </div>
     
     <div class="mb-3">
-        <label class="form-label">Username (Email)</label>
-        <input type="text" id="regUser" class="form-control" placeholder="newuser@example.com">
+        <label class="form-label fw-bold">Username (Email)</label>
+        <input type="text" id="regUser" class="form-control" placeholder="e.g. student101">
     </div>
 
     <div class="mb-3">
-        <label class="form-label">Password</label>
-        <input type="password" id="regPass" class="form-control" placeholder="******">
+        <label class="form-label fw-bold">Full Name</label>
+        <input type="text" id="regName" class="form-control" placeholder="e.g. Yash Kadav">
     </div>
 
     <div class="mb-3">
-        <label class="form-label">Full Name</label>
-        <input type="text" id="regName" class="form-control" placeholder="John Doe">
+        <label class="form-label fw-bold">Password</label>
+        <input type="password" id="regPass" class="form-control" placeholder="••••••">
     </div>
 
     <div class="mb-3">
-        <label class="form-label">I am a:</label>
+        <label class="form-label fw-bold">I am a:</label>
         <select id="regRole" class="form-select">
             <option value="STUDENT">Student</option>
             <option value="TRAINER">Trainer</option>
             </select>
     </div>
 
-    <button class="btn btn-success w-100" onclick="register()">Sign Up</button>
-    <div id="msg" class="mt-3 text-center"></div>
+    <button class="btn btn-success w-100 mt-2" id="btn-register" onclick="register()">
+        Sign Up
+    </button>
+    
+    <div id="msg" class="mt-3 text-center small"></div>
 
-    <hr>
+    <hr class="my-4">
     <div class="text-center">
-        <a href="login.html" class="text-decoration-none">Already have an account? Login</a>
+        <a href="login.html" class="text-decoration-none fw-bold text-primary">Already have an account? Login</a>
     </div>
 </div>
 
@@ -50,19 +85,29 @@
     const GATEWAY_URL = "http://localhost:8090";
 
     async function register() {
-        const user = document.getElementById("regUser").value;
-        const pass = document.getElementById("regPass").value;
-        const name = document.getElementById("regName").value;
+        const user = document.getElementById("regUser").value.trim();
+        const pass = document.getElementById("regPass").value.trim();
+        const name = document.getElementById("regName").value.trim();
         const role = document.getElementById("regRole").value;
+        const btn = document.getElementById("btn-register");
+        const msg = document.getElementById("msg");
 
-        if(!user || !pass) return alert("Please fill all details");
+        // Basic Validation
+        if(!user || !pass || !name) {
+            msg.innerHTML = `<span class="text-danger">⚠️ Please fill in all fields.</span>`;
+            return;
+        }
+
+        // Disable button to prevent double clicks
+        btn.disabled = true;
+        btn.innerHTML = `<span class="spinner-border spinner-border-sm"></span> Processing...`;
+        msg.innerHTML = "";
 
         const payload = {
             username: user,
             password: pass,
             role: role,
-            // Assuming your User Entity has a 'name' field. If not, remove this line.
-            name: name 
+            fullName: name // Match this key with your Java Auth DTO
         };
 
         try {
@@ -73,14 +118,21 @@
             });
 
             if(res.ok) {
-                document.getElementById("msg").innerHTML = `<span class="text-success">Registration Successful! Redirecting...</span>`;
-                setTimeout(() => window.location.href = "login.html", 1500);
+                msg.innerHTML = `<div class="alert alert-success py-2">✅ Registration Successful! Redirecting...</div>`;
+                setTimeout(() => window.location.href = "login.html", 2000);
             } else {
                 const txt = await res.text();
-                document.getElementById("msg").innerHTML = `<span class="text-danger">Error: ${txt}</span>`;
+                // Handle common backend error messages nicely
+                const errorMsg = txt.includes("exists") ? "Username already exists." : "Registration failed.";
+                msg.innerHTML = `<div class="alert alert-danger py-2">${errorMsg}</div>`;
+                btn.disabled = false;
+                btn.innerText = "Sign Up";
             }
         } catch (e) {
-            document.getElementById("msg").innerHTML = `<span class="text-danger">Server Error</span>`;
+            console.error(e);
+            msg.innerHTML = `<div class="alert alert-danger py-2">❌ Server Error. Is the backend running?</div>`;
+            btn.disabled = false;
+            btn.innerText = "Sign Up";
         }
     }
 </script>
